        font-size:1.2em;
        font-weight:bold;
        margin-top:1em;
        margin-bottom:0.5em;
        text-align:center }
      div.subtitle {
        color:#C0F0C0;
        font-size:0.8em;
        margin-bottom:1em;
        text-align:center }
      div.freetext { color:#F0F0F0 }
      div.list     { color:#C0C0F0 }
    </style>
  </head>
  <body>
    $ 1.4-DEV
      % Version 12
      _ 201x-xx-xx
      * #30 Solved disk space converted (no more 1.4e7)
      * Translate command (for display in list and widget)
      * Update RU translation (nearly finished)
      * Solved MqListener never shutdown (draining battery)
      * Solved Sync error if no xplstat in device json
      * Solved Map crash (memory leak)
      * #23 Solved Map AutoZoom working (3 years old bug)
      * #58 Start passing all log level in apps
      * Make log to screen works. (Old TODO)
      % Version 11
      _ 2015-11-29
      * Update translation RU/FR/NL
	  * Solved #57 free_command widget for number limit to number keyboard but allow float value with a "."
	  * Change api version check to allow sync with 0.8
	  * Close #54 invert order of callerId if in 0.4 
      * Avoid refresh screen when changing a value #40 
      * Close #50 Bug for command in map due to DB request error
      * Add "command" in house and Map widget list to distinct command from sensor #56  
      * URL missing in command of type string #50 
      * Close #48 Mapview widget name for 0.4
      * Command for boolean type and correct a bug for 0.3 always off #48
	  * Add command info in map widget and translation of states if in R.STRING #48
	  * Change display name/description like not in map mode #48 
      * Close #51 Sensor for DT_Trigger not displaying last value
      * Bug for DT_Trigger command not correctly send #51
      * Add toast when a command failed
      * Force alternative on/off widget because of separation of sensor/command in 0.4