@@ -32,7 +32,7 @@
     <string name="help_Title">Domodroid</string>
     <string name="help_Text3">Domogik Project : http://www.domogik.org/</string>
     <string name="help_Text4">Domodroid documentatie is beschikbaar op: http://domodroid.readthedocs.org/</string>
-    <string name="help_Text5">Contact mailing list :\n domogik-developers@lists.labs.libre-entreprise.org</string>
+    <string name="help_Text5">Contact mailing list:\ndomogik-developers@lists.labs.libre-entreprise.org</string>
     <string name="splash_title">Welkom in Domodroid 1.3 !</string>
     <string name="home_splash">Deze nieuwe versie van Domodroid bevat veel nieuwe functionaliteiten en verbeteringen die niet allemaal getest zijn op alle mogelijke Android toestellen. Als er iets mis gaat, dan kan je de ontwikkelaar contacteren op het volgende adres: http://wiki.domogik.org/Contact+and+support .</string>
     <string name="home_splash2">Gelieve de Domodraid cache data te verwijderen in het \"Applicatie Configuratie\" paneel alvorens deze nieuwe versie te gebruiken.</string>
