@@ -31,11 +31,11 @@
 	<string name="Ok">OK</string>
 	
 	<string name="help_Title">Domodroid</string>
-	<string name="help_Text1">Domodroid free Android application under GNU GPLv3 Licence and developed by Pierre Lainé\n Modified by Dominique DAMBRAIN</string>
+	<string name="help_Text1">Domodroid free Android application under GNU GPLv3 Licence and developed by Pierre Lainé\nModified by Dominique DAMBRAIN</string>
 	<string name="help_Text2">Dim the lights, get information\'s about the inside temperature or the outside humidity, all with a single tap on your Android device. Requires a home automation system and a Domogik server. Domodroid offers you control of your Domogik home automation system with a large variety of devices supported</string>
 	<string name="help_Text3">Domogik Project : http://www.domogik.org/</string>
-	<string name="help_Text4">Domodroid documentation is available at: http://domodroid.readthedocs.org/</string>
-	<string name="help_Text5">Contacts by mailing list :\n domogik-developers@lists.labs.libre-entreprise.org</string>
+	<string name="help_Text4">Domodroid documentation is available at:\nhttp://domodroid.readthedocs.org/</string>
+	<string name="help_Text5">Contacts by mailing list :\ndomogik-developers@lists.labs.libre-entreprise.org</string>
 	
 	<string name="splash_title">Welcome to Domodroid 1.3 !</string>
 	<string name="home_splash">This new version of Domodroid contains lot of new features and improvements that have not been tested on all kind of Android devices. If anything goes wrong, you can contact dev at the following address: http://wiki.domogik.org/Contact+and+support .</string>
@@ -601,4 +601,6 @@
 	<string name="rssi_open_close">Rssi open close</string>
 	<string name="available">Available</string>
 	<string name="rssi_lighting2">Rssi lighting2</string>
+	<string name="about_maintain">Maintain by new.domodroid@gmail.com</string>
+	<string name="about_traduction">Translate by transifex here:\nhttps://www.transifex.com/tikismoke-domodroid/</string>
 </resources>
